[package]
name = "token-2022-default-account-state-program"
version = "0.1.0"
edition = "2021"

[dependencies]
borsh = "0.9.3"
borsh-derive = "1.5.5"
solana-program = "2.2.1"
spl-associated-token-account = { version="2.3.0", features = [ "no-entrypoint" ] }
spl-token-2022 = {version = "0.7.0", features = [ "no-entrypoint" ] }

[lib]
crate-type = ["cdylib", "lib"]
